pulkitchhabra-salesforce/objects/Know_Your_Client__c.object
<CustomObject>
    <customHelp>WealthHelpLink</customHelp>
    <description>Object and tab used to manage the Know Your Client process.  Master-detail with Clients.</description>
    <fields>
        <fullName>Allow_Speculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this Client allow speculation?</description>
        <label>Allow Speculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_of_assets_planned_to_invest__c</fullName>
        <description>Amount of assets planned to invest</description>
        <label>Amount of assets planned to invest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Know Your Client form is approved or not.</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assets_Under_Management__c</fullName>
        <description>What is the current value of assets under management for this Client?</description>
        <label>Assets Under Management</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Ever_Convicted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To the best of your knowledge, has the client ever been convicted of a criminal offense or been the subject of sanctions by any regulatory body or professional organization</description>
        <inlineHelpText>To the best of your knowledge, has the client ever been convicted of a criminal offense or been the subject of sanctions by any regulatory body or professional organization</inlineHelpText>
        <label>Client Ever Convicted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Experience_with_Investments__c</fullName>
        <description>What type of experience does the Client have with various Investments Instruments?</description>
        <label>Experience with Investments Instruments</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Previous Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <description>Master-detail relationship for Know Your Client and Clients.</description>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Know_Your_Cilent</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Corporate_Officer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Client a corporate officer?</description>
        <label>Corporate Officer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_of_Citizenship__c</fullName>
        <description>Country of Citizenship for Client</description>
        <label>Country of Citizenship</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Residence__c</fullName>
        <description>Country of Residence for Client</description>
        <label>Country of Residence</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <description>Where Client is currently employed</description>
        <label>Current Employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_KYC_Approved__c</fullName>
        <description>Date Know Your Client form was approved/rejected.  Based on a workflow rule.</description>
        <label>Date KYC Approved/Rejected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_KYC_Submitted__c</fullName>
        <description>Date the Know Your Client form was submitted</description>
        <label>Date KYC Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Describe_relationship_to_an_employee__c</fullName>
        <description>If yes, Describe relationship to an employee</description>
        <label>Describe relationship to an employee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employed_Since__c</fullName>
        <description>Since when (year) has the Client worked at their current employer.</description>
        <label>Employed Since</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Comp__c</fullName>
        <description>What is the estimated annual compenstation for the Client?</description>
        <label>Estimated Annual Comp.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Net_Worth__c</fullName>
        <description>Estimated Net Worth</description>
        <label>Estimated Net Worth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Income__c</fullName>
        <description>What is the estimated total income for this Client?</description>
        <label>Estimated Total Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_amount_of_investable_assets__c</fullName>
        <description>Estimated amount of “investable” assets</description>
        <label>Estimated amount of “investable” assets</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_Income_Tax_Bracket__c</fullName>
        <description>What is the federal income tax bracket of the Client?</description>
        <label>Federal Income Tax Bracket</label>
        <picklist>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial Advisor who is managing this Know Your Client form.  Lookup to Users.</description>
        <label>Financial Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Know_Your_Cilent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Institution_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Client an employee of the financial institution?</description>
        <label>Financial Institution Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Further_Describe_Source_of_Wealth__c</fullName>
        <description>Further Describe Source of Wealth.  Detail the history of wealth for each of the sources</description>
        <label>Further Describe Source of Wealth</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>High_Risk_of_Money_Laundering__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To the best of your knowledge, does the client have any association or other interaction (e.g. property, business dealings, company) within or with any country that poses a high risk of money laundering?</description>
        <inlineHelpText>To the best of your knowledge, does the client have any association or other interaction (e.g. property, business dealings, company) within or with any country that poses a high risk of money laundering?</inlineHelpText>
        <label>High Risk of Money Laundering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investment_Knowledge__c</fullName>
        <description>What is the investment knowledge of the Client?</description>
        <label>Investment Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KYC_Approval_Status_Indicator__c</fullName>
        <formula>IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot; &amp;CASE( Status__c , &quot;Not Submitted&quot;, &quot;01570000000m94f&quot;, &quot;Pending Approval&quot;, &quot;01570000000m94g&quot;, &quot;Approved&quot;, &quot;01570000000m94h&quot;, &quot;Rejected&quot;,&quot;01570000000m94i&quot;,&quot;&quot;),&quot; wmekyc__KYC_Status_Indicator__c &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KYC Approval Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <description>What is the marital status of the Client?</description>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nature_of_the_Individual_s_Business__c</fullName>
        <description>What type of business is the Client involved in?</description>
        <label>Nature of the Individual’s Business</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_of_Foreign_Assets_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To the best of your knowledge, does the client have any association or other interaction (e.g. property, business dealings, company) within or with any country, region, government, organization or person that is sanctioned by The Office of Foreign Assets Control (OFAC)?</description>
        <inlineHelpText>To the best of your knowledge, does the client have any association (e.g. property, business dealings, company) within or with any country, region, government, organization or person that is sanctioned by The Office of Foreign Assets Control (OFAC)?</inlineHelpText>
        <label>Office of Foreign Assets Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Investment_Objectives__c</fullName>
        <description>What are the overall investment objectives of the Client?</description>
        <label>Overall Investment Objectives</label>
        <picklist>
            <picklistValues>
                <fullName>Conservative Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aggressive Growth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Past_Litigation_against_the_Institution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To the best of your knowledge, has the client ever been involved in any past litigation against the institution or any of its subsidiaries or is the client threatening litigation against the institution or any of its subsidiaries?</description>
        <inlineHelpText>To the best of your knowledge, has the client ever been involved in any past litigation against the institution or any of its subsidiaries or is the client threatening litigation against the institution or any of its subsidiaries?</inlineHelpText>
        <label>Past Litigation against the Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Photo_ID_Provided__c</fullName>
        <description>What type of photo ID has been provided?</description>
        <label>Photo ID Provided</label>
        <picklist>
            <picklistValues>
                <fullName>Driver&apos;s License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National/State ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passport</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profession_Occupation__c</fullName>
        <description>Profession/Occupation of Client</description>
        <label>Profession/Occupation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_to_an_employee_of_the_company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To the best of your knowledge, is the individual related to an employee of this institution?</description>
        <label>Related to an employee of the company?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Tolerance__c</fullName>
        <description>What is this the risk tolerance of this Client?</description>
        <label>Risk Tolerance</label>
        <picklist>
            <picklistValues>
                <fullName>Aggressive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_of_Wealth__c</fullName>
        <description>Where does the Client&apos;s wealth come from?</description>
        <label>Source of Wealth</label>
        <picklist>
            <picklistValues>
                <fullName>Business Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inheritance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary/Earnings</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Know Your Client approval status</description>
        <label>KYC Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Current job title</description>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Dependents__c</fullName>
        <description>How many dependents does the Client have?</description>
        <label># of Dependents</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Know Your Client</label>
    <listViews>
        <fullName>AllKnowYourClient</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Status__c</columns>
        <columns>Date_KYC_Submitted__c</columns>
        <columns>Date_KYC_Approved__c</columns>
        <columns>Financial_Advisor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Know Your Client</label>
    </listViews>
    <listViews>
        <fullName>MyKnowYourClient</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Status__c</columns>
        <columns>Date_KYC_Submitted__c</columns>
        <columns>Date_KYC_Approved__c</columns>
        <columns>Financial_Advisor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Know Your Client</label>
    </listViews>
    <listViews>
        <fullName>MyKnowYourClientApproved</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Date_KYC_Submitted__c</columns>
        <columns>Date_KYC_Approved__c</columns>
        <columns>Financial_Advisor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>My Know Your Client - Approved</label>
    </listViews>
    <listViews>
        <fullName>MyKnowYourClientNotSubmitted</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Date_KYC_Submitted__c</columns>
        <columns>Date_KYC_Approved__c</columns>
        <columns>Financial_Advisor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Submitted</value>
        </filters>
        <label>My Know Your Client - Not Submitted</label>
    </listViews>
    <listViews>
        <fullName>MyKnowYourClientPendingApproval</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Date_KYC_Submitted__c</columns>
        <columns>Date_KYC_Approved__c</columns>
        <columns>Financial_Advisor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>My Know Your Client - Pending Approval</label>
    </listViews>
    <listViews>
        <fullName>MyKnowYourClientRejected</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Date_KYC_Submitted__c</columns>
        <columns>Date_KYC_Approved__c</columns>
        <columns>Financial_Advisor__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>My Know Your Client - Rejected</label>
    </listViews>
    <nameField>
        <label>Know Your Cilent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Know Your Clients</pluralLabel>
    <recordTypes>
        <fullName>NotSubmitted</fullName>
        <active>true</active>
        <description>Record type used when Know Your Client is unlocked and Not Submitted</description>
        <label>Not Submitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Submitted</fullName>
        <active>true</active>
        <description>Record type used when Know Your Client is locked and Submitted</description>
        <label>Submitted</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>